[package]
name = "ptree"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ptree"
path = "src/main.rs"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
parking_lot = "0.12"
num_cpus = "1.16"
serde_json = "1.0"
memmap2 = "0.9"
colored = "2.1"
atty = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt", "handleapi", "winioctl", "ntdef", "ioapiset", "minwindef", "winbase", "winerror"] }
windows = { version = "0.52", features = [
    "Win32_Foundation", 
    "Win32_Storage_FileSystem",
    "Win32_System_Memory"
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "traversal_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
