[workspace]
resolver = "2"
members = [
  "crates/ptree-bin",         #### 1
  "crates/ptree-cache",
  "crates/ptree-cli",         #### 2
  "crates/ptree-core",
  "crates/ptree-incremental",
  "crates/ptree-scheduler",
  "crates/ptree-traversal",
]

[workspace.dependencies.ptree-bin]
path = "crates/ptree-bin"

[workspace.dependencies.ptree-cache]
path = "crates/ptree-cache"
default-features = false
features = ["std"]

[workspace.dependencies.ptree-cli]
path = "crates/ptree-cli"
default-features = false
features = ["scheduler"]

[workspace.dependencies.ptree-core]
path = "crates/ptree-core"

[workspace.dependencies.ptree-incremental]
path = "crates/ptree-incremental"

[workspace.dependencies.ptree-scheduler]
path = "crates/ptree-scheduler"

[workspace.dependencies.ptree-traversal]
path = "crates/ptree-traversal"
default-features = false
features = ["std"]


[workspace.dependencies]
anyhow = "1.0"
atty = "0.2"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"

# dev-dependencies
criterion = { version = "0.5", features = ["html_reports"] }


# [features]
# default = ["scheduler"]
# scheduler = ["ptree-scheduler"]
# incremental = ["ptree-incremental"]
#
# [dev-dependencies]
# criterion = { version = "0.5", features = ["html_reports"] }
#
# [[bench]]
# name = "traversal_benchmarks"
# harness = false
#
# [profile.release]
# lto = true
# codegen-units = 1
# opt-level = 3
