[package]
name = "ptree-cache"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
colored = "2.1"
memmap2 = "0.9"
parking_lot = { workspace = true }
rayon = { workspace = true }
rkyv = { version = "0.7", features = ["validation"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = ["std"]
std = []
