[package]
name = "ptree-traversal"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
ptree-cli = { path = "../ptree-cli" }
ptree-cache = { path = "../ptree-cache" }

anyhow = { workspace = true }
chrono = { workspace = true }
num_cpus = "1.16"
parking_lot = { workspace = true }
rayon = { workspace = true }

[features]
default = ["std"]
std = []
